--- a/app/views/devise/partial_registrations/_inputs_additional_info_user.html.erb
+++ b/app/views/devise/partial_registrations/_inputs_additional_info_user.html.erb
@@ -1,7 +1,7 @@
 <div class="container-additional-info-user">
   <div class="container-birth-date">
     <div class="container-month">
-      <div class="span-birth-date">
+      <div class="container-span-birth-date">
         <span>Data Nascimento: </span>
       </div>
       <%= f.simple_fields_for :additional_info_user do |aiu| %>
