--- a/app/assets/stylesheets/devise/partial_registrations_css/inputs_additional_info_user.css
+++ b/app/assets/stylesheets/devise/partial_registrations_css/inputs_additional_info_user.css
@@ -14,7 +14,7 @@
   gap: 10px;
 }
 
-.span-birth-date {
+.container-span-birth-date {
   display: flex;
   align-items: center;
 }
@@ -33,10 +33,62 @@
   }
 }
 
+#user_additional_info_user_attributes_birth_date_1i {
+  padding: 9px 10px !important;
+  border: 1px solid #bdbdbd;
+  border-left: 4px solid #bdbdbd;
+  color: #494949 !important;
+  cursor: pointer !important;
+  margin-left: 0px !important;
+}
+
+#user_additional_info_user_attributes_birth_date_1i:focus {
+  outline: none;
+}
+
+#user_additional_info_user_attributes_birth_date_2i {
+  padding: 9px 20px 9px 5px !important;
+  border: 1px solid #bdbdbd;
+  border-left: 4px solid #bdbdbd;
+  color: #494949 !important;
+  cursor: pointer !important;
+}
+
+#user_additional_info_user_attributes_birth_date_2i:focus {
+  outline: none;
+}
+
+#user_additional_info_user_attributes_birth_date_3i {
+  padding: 9px 40px 9px 5px !important;
+  border: 1px solid #bdbdbd;
+  border-left: 4px solid #bdbdbd;
+  color: #494949 !important;
+  cursor: pointer !important;
+}
+
+#user_additional_info_user_attributes_birth_date_3i:focus {
+  outline: none;
+}
+
 .container-gender-phone {
   display: flex;
   align-items: center;
   gap: 15px;
+}
+
+.user_additional_info_user_phone {
+  margin-bottom: 0px !important;
+  width: 20%;
+
+
+  >input {
+    border: 1px solid #bdbdbd;
+    border-left: 4px solid #bdbdbd;
+    /* border: 1px solid rgb(217, 83, 79);
+    border-left: 4px solid rgb(217 83 79); */
+    color: #494949 !important;
+    border-radius: 0px !important;
+  }
 }
 
 .user_additional_info_user_gender {
@@ -109,6 +161,26 @@
   font-size: 13px !important;
   color: rgb(52, 120, 193) !important;
   cursor: pointer;
+}
+
+.svg-sort-up-new-user {
+  display: none;
+  width: 8px;
+  position: absolute;
+  left: 21px;
+  top: 53px;
+  fill: rgb(250, 196, 196);
+}
+
+.span-error-cep {
+  display: none;
+  position: absolute;
+  left: 0px;
+  top: 58px;
+  font-size: 12px;
+  padding: 2px 5px;
+  color: rgb(163, 0, 1);
+  background-color: rgb(250, 196, 196);
 }
 
 .container-logro-num-comple-refe {
