--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -1,2 +1,15 @@
-<h1>ChoseMovieTheater#index</h1>
-<p>Find me in app/views/chose_movie_theater/index.html.erb</p>
+<div class="container-banner-movie-and-chose-movie-theater">
+  <div class="container-movie-banner-and-more-info">
+    <div class="container-banner-background">
+      <%= image_tag @movie.image_background, class: "movie-banner-background", alt: @movie.title %>
+      <div class="container-banner-info-movie">
+        <div class="container-banner-main">
+          <%= image_tag @movie.image_main, class: "movie-banner-main", alt: @movie.title %>
+        </div>
+        <div class="container-info-movie-title-descri-etc">
+          <h1 class="h1-title"><%= @movie.title %></h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
