--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,6 +3,7 @@
 @import './home/apllication.css';
 @import './application/login_or_register.css';
 @import './chose_movie_theater/index.css';
+@import './chose_movie_theater_partial/banner_main.css';
 
 body {
   background-color: rgb(4 18 24) !important;
