--- a/app/assets/stylesheets/chose_movie_theater/index.css
+++ b/app/assets/stylesheets/chose_movie_theater/index.css
@@ -14,12 +14,12 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 700px;
+  /* width: 700px; */
+  width: 100%;
   height: 100%;
 }
 
 .container-banner-background {
-  /* width: 70%; */
   width: 75rem;
   height: 260px;
   position: relative;
@@ -28,16 +28,11 @@
 @media (max-width: 1455px) {
   .container-banner-background {
     width: 70%;
-    /* width: 75rem; */
     height: 260px;
   }
 }
 
-@media (max-width: 1275px) {
-  /* .container-banner-background::before {
-    width: 150px !important;
-  } */
-
+/* @media (max-width: 1275px) {
   .container-banner-background::after {
     width: 600px !important;
   }
@@ -46,9 +41,8 @@
 @media (max-width: 1100px) {
   .container-banner-background::after {
     width: 400px !important;
-
   }
-}
+} */
 
 .container-banner-background::after {
   content: "";
@@ -56,11 +50,12 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 800px;
+  /* width: 800px; */
+  width: 100%;
   height: 100%;
 }
 
-.movie-banner-background {
+.movie-banner-background-chose-movie-theater {
   width: 100%;
   height: 100%;
 }
@@ -71,15 +66,13 @@
   position: absolute;
   left: -85px;
   top: 25px;
+  z-index: 10;
 }
 
-.container-banner-main {
+/* .container-banner-main-chose-movie-theater {
   width: 205px;
   height: 300px;
-  /* position: absolute;
-  left: -85px;
-  top: 25px; */
-}
+} */
 
 @media (max-width: 1455px) {
   .container-banner-info-movie {
@@ -99,14 +92,118 @@
   }
 }
 
-.movie-banner-main {
+/* .movie-banner-main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+} */
+
+.container-info-movie-title-descri-etc {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 28rem;
+  margin-top: 15px;
 }
 
-.container-info-movie-title-descri-etc {}
-
 .h1-title {
+  font-size: 28px;
   color: #fff;
+}
+
+.container-main-gender-duration-movie_rating-see-more {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.container-gender-duration-movie_rating {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.span-gender-chose-movie-theater {
+  color: #fff;
+}
+
+.container-line-white-chose-movie-theater {
+  border: 1px solid #fff;
+  height: 17px;
+}
+
+.span-duration-chose-movie-theater {
+  color: #a4a4a4;
+  font-weight: 500;
+}
+
+.container-span-movierating-chose-movie-theater {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  background: #ffb631;
+}
+
+.span-movierating-chose-movie-theater {
+  font-size: 12px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.container-description-chose-movie-theater {
+  display: flex;
+  align-items: end;
+  white-space: pre-line;
+  line-height: 1;
+}
+
+.span-description-chose-movie-theater {
+  font-size: 14px;
+  width: 21rem;
+  color: #fff;
+}
+
+.button-see-more-chose-movie-theater {
+  background: none;
+  color: rgb(152 170 236);
+  border: none;
+}
+
+.button-see-more-chose-movie-theater:hover {
+  color: rgb(112 143 253);
+}
+
+.container-icon-button-share-chose-movie-theater {
+  display: flex;
+  margin-top: 25px;
+}
+
+.icon-share-chose-movie-theater {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 29px;
+  height: 29px;
+  background-color: rgb(52 60 70);
+  border-radius: 50%;
+
+  >svg {
+    width: 17px;
+    height: 17px;
+    fill: rgb(56 111 178);
+  }
+}
+
+.button-share-chose-movie-theater {
+  font-weight: 600;
+  background: none;
+  color: rgb(152 170 236);
+  border: none;
+}
+
+.button-share-chose-movie-theater:hover {
+  color: rgb(112 143 253);
 }
