criando _info_movie partial e o css dele

--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -4,32 +4,7 @@
       <%= image_tag @movie.image_background, class: "movie-banner-background-chose-movie-theater", alt: @movie.title %>
       <div class="container-banner-info-movie">
         <%= render 'chose_movie_theater_partial/banner_main' %>
-        <div class="container-info-movie-title-descri-etc">
-          <h1 class="h1-title"><%= @movie.title %></h1>
-          <div class="container-main-gender-duration-movie_rating-see-more">
-            <div class="container-gender-duration-movie_rating">
-              <span class="span-gender-chose-movie-theater"><%= @movie.gender %></span>
-              <div class="container-line-white-chose-movie-theater"></div>
-              <span class="span-duration-chose-movie-theater"><%= @movie.duration %></span>
-              <div class="container-line-white-chose-movie-theater"></div>
-              <div class="container-span-movierating-chose-movie-theater">
-                <span class="span-movierating-chose-movie-theater"><%= @movie.movie_rating %></span>
-              </div>
-            </div>
-            <div class="container-description-chose-movie-theater">
-              <span class="span-description-chose-movie-theater"><%= @movie.description %></span>
-              <button class="button-see-more-chose-movie-theater">ver mais</button>
-            </div>
-          </div>
-          <div class="container-icon-button-share-chose-movie-theater">
-            <div class="icon-share-chose-movie-theater">
-              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" class="injected-svg" data-src="/images/share.svg" xmlns:xlink="http://www.w3.org/1999/xlink" role="img">
-                <path d="M44.833 9.333c4.879 0 8.834 3.955 8.834 8.834 0 4.878-3.955 8.833-8.834 8.833-3.162 0-5.937-1.662-7.497-4.16l-13.388 6.405c.25.819.385 1.688.385 2.588 0 .933-.144 1.832-.412 2.677l13.572 6.408C39.078 38.555 41.774 37 44.833 37c4.879 0 8.834 3.955 8.834 8.833 0 4.879-3.955 8.834-8.834 8.834-4.878 0-8.833-3.955-8.833-8.834 0-.393.026-.78.075-1.16l-14.213-6.712C20.255 39.63 18 40.667 15.5 40.667c-4.879 0-8.833-3.955-8.833-8.834C6.667 26.955 10.62 23 15.5 23c2.534 0 4.82 1.067 6.43 2.777l14.111-6.752c-.027-.282-.041-.569-.041-.858 0-4.879 3.955-8.834 8.833-8.834zm0 31.26c-2.894 0-5.24 2.346-5.24 5.24s2.346 5.24 5.24 5.24 5.24-2.346 5.24-5.24-2.346-5.24-5.24-5.24zm-29.333-14c-2.894 0-5.24 2.346-5.24 5.24s2.346 5.24 5.24 5.24 5.24-2.346 5.24-5.24-2.346-5.24-5.24-5.24zm29.333-13.666c-2.894 0-5.24 2.346-5.24 5.24s2.346 5.24 5.24 5.24 5.24-2.346 5.24-5.24-2.346-5.24-5.24-5.24z"></path>
-              </svg>
-            </div>
-            <button class="button-share-chose-movie-theater">Compartilhar</button>
-          </div>
-        </div>
+        <%= render 'chose_movie_theater_partial/info_movie' %>
       </div>
     </div>
   </div>
