--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -8,4 +8,16 @@
       </div>
     </div>
   </div>
+  <div class="container-chose-movie-theater">
+    <ul class="ul-chose-sessions-aboutthefilm">
+      <li class="li-chose-sessions">Sessões</li>
+      <li class="li-chose-aboutthefilm">Sobre o filme</li>
+    </ul>
+    <div class="container-date-for-watch-film" id="container-date-for-watch-film-id">
+      <%# <div class="container-date-chose-movie-theater">
+        <span class="span-day-month"></span>
+        <span class="span-name-day"></span>
+      </div> %>
+    </div>
+  </div>
 </div>
