arrumando category movie e css

--- a/app/assets/stylesheets/chose_movie_theater/index.css
+++ b/app/assets/stylesheets/chose_movie_theater/index.css
@@ -162,3 +162,50 @@
   width: 15%;
   cursor: pointer;
 }
+
+.container-category-main-chose-movie-theater {
+  width: 90% !important;
+}
+
+.container-category-movie-chose-movie-theater {
+  gap: 10px;
+  display: flex;
+  overflow-x: auto !important;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+  margin-top: 20px;
+  padding-bottom: 15px;
+}
+
+.container-category-movie-chose-movie-theater::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+  background: #666666;
+  border-radius: 5px;
+
+}
+
+.container-category-movie-chose-movie-theater::-webkit-scrollbar-thumb {
+  background-color: #252525;
+  /* Altere para a cor desejada */
+  border-radius: 5px;
+}
+
+.container-category-name {
+  border: 2px solid #98aaec;
+  border-radius: 50px;
+  color: #98aaec;
+  width: 210px;
+  padding: 3px 25px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.container-category-name:hover {
+  color: #8190c8;
+  border-color: #8190c8;
+}
