--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -19,5 +19,17 @@
         <span class="span-name-day"></span>
       </div> %>
     </div>
+    <div class="container-category-main-chose-movie-theater" style="width: 100%; overflow-x: auto; overflow-y: hidden;">
+      <div class="container-category-movie-chose-movie-theater">
+        <div class="container-category-name">VIP</div>
+        <div class="container-category-name">DUBLADO</div>
+        <div class="container-category-name">TELAS GIGANTES/PLF</div>
+        <div class="container-category-name">NORMAL</div>
+        <div class="container-category-name">LEGENDADO</div>
+        <div class="container-category-name">XD</div>
+        <div class="container-category-name">D-BOX</div>
+        <div class="container-category-name">3D</div>
+      </div>
+    </div>
   </div>
 </div>
