criando uma mudança para as colunas da tabela Cinema para NOT NULL

--- a/app/views/admin/cinemas/_form.html.erb
+++ b/app/views/admin/cinemas/_form.html.erb
@@ -2,14 +2,9 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :image_main, as: :file %>
-    <%= f.input :image_background, as: :file %>
-    <%= f.input :description %>
-    <%= f.input :gender %>
-    <%= f.input :duration %>
-    <%= f.input :movie_rating %>
-    <%= f.input :status_movie %>
+    <%= f.input :name_cinema %>
+    <%= f.input :district %>
+    <%= f.input :ranking %>
   </div>
   <div class="form-actions">
     <%= f.button :submit, 'Salvar', class: 'btn btn-info' %>
