--- a/app/views/admin/cinemas/index.html.erb
+++ b/app/views/admin/cinemas/index.html.erb
@@ -28,9 +28,7 @@
             <%# validates :name_cinema, :district, :ranking, presence: true %>
           </tbody>
         </table>
-        <%= link_to "New cinema", new_admin_cinema_path, 
-        # "data-controller": "admin-modal", 
-        class: 'btn btn-primary' %>
+        <%= link_to "New cinema", new_admin_cinema_path, "data-controller": "admin-modal", class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
