--- a/app/views/admin/cinemas/_cinema.html.erb
+++ b/app/views/admin/cinemas/_cinema.html.erb
@@ -1,2 +1,9 @@
-<div id="<%= dom_id cinema %>">
+<div class="card shadow mb-4">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Nome do Cinema: <%= cinema.name_cinema %></h5>
+      <p class="card-text">Rua: <%= cinema.district %></p>
+      <p class="card-text">Ranking: <%= cinema.ranking %></p>
+    </div>
+  </div>
 </div>
