--- a/app/views/admin/cinema_movies/index.html.erb
+++ b/app/views/admin/cinema_movies/index.html.erb
@@ -1,14 +1,38 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Cinema movies</h1>
-
-<div id="cinema_movies">
-  <% @cinema_movies.each do |cinema_movie| %>
-    <%= render cinema_movie %>
-    <p>
-      <%= link_to "Show this cinema movie", cinema_movie %>
-    </p>
-  <% end %>
+<h1 class="h3 mb-4 text-gray-800">Cinema Movie</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <!-- Circle Buttons -->
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <table class="table table-striped">
+          <thead>
+            <th>CinemaId</th>
+            <th>MovieId</th>
+            <th>RegionId</th>
+            <th>ScreeningSchedule</th>
+            <th>Ações</th>
+          </thead>
+          <tbody>
+            <% @cinema_movies.each do | cinema_movie | %>
+              <tr>
+                <td><%= cinema_movie.movie_id %></td>
+                <td><%= cinema_movie.cinema_id %></td>
+                <td><%= cinema_movie.region_id %></td>
+                <td><%= cinema_movie.screening_schedule %></td>
+                <td class="col-lg-3">
+                  <%= link_to "Details", admin_cinema_movie_path(cinema_movie), class: 'btn btn-primary' %>
+                  <%= link_to "Edit", edit_admin_cinema_movie_path(cinema_movie), class: 'btn btn-secondary' %>
+                  <%= link_to "Delete", admin_cinema_movie_path(cinema_movie), class: 'btn btn-danger', method: :delete,  data: { turbo_method: :delete, turbo_confirm: 'Deseja realmente excluir?' } %>
+                </td>
+              </tr>
+            <% end %>
+            <%# validates :name_cinema, :district, :ranking, presence: true %>
+          </tbody>
+        </table>
+        <%= link_to "New cinema", new_admin_cinema_path, "data-controller": "admin-modal", class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New cinema movie", new_cinema_movie_path %>
+<%# validates :movie_id, :cinema_id, :region_id, :screening_schedule, presence: true %>
