--- a/app/views/admin/cinema_movies/index.html.erb
+++ b/app/views/admin/cinema_movies/index.html.erb
@@ -30,9 +30,8 @@
             <%# validates :name_cinema, :district, :ranking, presence: true %>
           </tbody>
         </table>
-        <%= link_to "New cinema", new_admin_cinema_path, "data-controller": "admin-modal", class: 'btn btn-primary' %>
+        <%= link_to "New cinema", new_admin_cinema_movie_path, "data-controller": "admin-modal", class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
 </div>
-<%# validates :movie_id, :cinema_id, :region_id, :screening_schedule, presence: true %>
