criando folder svgs

--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -31,5 +31,20 @@
         <div class="container-category-name">3D</div>
       </div>
     </div>
+    <div class="container-other-cinemas-chose-movie-theater">
+      <span class="span-other-cinemas">Outros Cinemas</span>
+      <div class="container-line-chose-movie-theater"></div>
+    </div>
+    <div class="container-location-movie-theater-main">
+      <div class="container-location-movie-theater">
+        <div class="container-top-location-movie-theater">
+          <div class="svg-heart">
+            <%= render "chose_movie_theater_svgs_partials/svg_heart" %>
+          </div>
+        </div>
+        <div class="container-schedule-movie-theater">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
