ajeitando chose_movie_theater

--- a/app/assets/stylesheets/chose_movie_theater/index.css
+++ b/app/assets/stylesheets/chose_movie_theater/index.css
@@ -233,6 +233,20 @@
   margin-top: 3px;
 }
 
+.container-top-location-movie-theater {
+  display: flex;
+}
+
+.container-namecinema-district {}
+
+.p-name-cinema {
+  color: #fff;
+}
+
+.span-district {
+  color: rgb(153 153 153);
+}
+
 .svg-heart {
   >svg {
     width: 40px;
