--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -53,6 +53,14 @@
                 <%= render "chose_movie_theater_svgs_partials/svg_seats" %>
                 <span>Assentos</span>
               </div>
+              <div class="container-price">
+                <%= render "chose_movie_theater_svgs_partials/svg_price" %>
+                <span>Preços</span>
+              </div>
+              <div class="container-details">
+                <%= render "chose_movie_theater_svgs_partials/svg_details" %>
+                <span>Preços</span>
+              </div>
             </div>
           </div>
           <div class="container-schedule-movie-theater">
