--- a/app/assets/stylesheets/chose_movie_theater/index.css
+++ b/app/assets/stylesheets/chose_movie_theater/index.css
@@ -236,16 +236,19 @@
 .container-location-movie-theater-main {
   display: flex;
   flex-direction: column;
-  gap: 20px
+  gap: 20px;
+  width: 90%;
 }
 
 .container-location-movie-theater {
   background: rgb(33 38 45);
-  padding: 15px 10px;
+  padding: 15px 20px;
+  border-radius: 15px;
 }
 
 .container-top-location-movie-theater {
   display: flex;
+  justify-content: space-between;
 }
 
 .container-svg-heart-info-location-movie {
@@ -259,9 +262,12 @@
 .p-name-cinema {
   color: #fff;
   margin-bottom: 0px;
+  font-size: 17px;
+  font-weight: 700;
 }
 
 .span-district {
+  font-size: 15px;
   color: rgb(153 153 153);
 }
 
@@ -290,4 +296,73 @@
     width: 25px;
     fill: rgb(122 137 188);
   }
+}
+
+.container-line-between-svgs-schedule {
+  border: 1px solid rgb(122 137 188 / 18%);
+}
+
+.container-schedule-movie-theater {
+  color: #fff;
+  margin-top: 20px;
+}
+
+.container-span-vip-dublado {
+  display: flex;
+  gap: 10px;
+
+  >span {
+    color: #fff;
+    background: rgb(50 85 226);
+    border-radius: 5px;
+    padding: 2px 15px;
+    font-size: 13px;
+    font-weight: 600;
+  }
+}
+
+.container-svg-ticket {
+  border: 2px solid rgb(152 170 236);
+  border-radius: 10px;
+  width: 17%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  position: relative;
+
+}
+
+.container-svg-ticket::before {
+  content: "";
+  width: 7px;
+  height: 14px;
+  border: 2px solid rgb(152 170 236);
+  border-left: 1px solid transparent;
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: rgb(33 38 45);
+  position: absolute;
+  left: -2px;
+}
+
+.container-svg-ticket::after {
+  content: "";
+  width: 7px;
+  height: 14px;
+  border: 2px solid rgb(152 170 236);
+  border-right: 1px solid transparent;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  background-color: rgb(33 38 45);
+  position: absolute;
+  right: -2px;
+}
+
+
+
+.container-telasgigantesplg-dublado {
+  display: flex;
+  gap: 10px;
 }
