--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -78,21 +78,31 @@
                         <span>DUBLADO</span>
                       </div>
                       <div class="container-svg-ticket">
-                        <span><%= schedule_part_split_spaces[index - 1] %></span>
+                        <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
+                        <span class="span-comprar">Comprar</span>
                       </div>
                     <% end %>
                   <% end %>
                 <% end %>
               </div>
               <div class="container-telasgigantesplg-dublado">
-                <% schedule_parts.each do |schedule_part| %>
-                  <% schedule_part_split_spaces = schedule_part.split(" ") %>
-                  <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
-                    <% if schedule_part_split_space == "tg-d" %>
-                      <p><%= schedule_part_split_spaces[index - 1] %></p>
+                <div class="container-span-telasgigantesplf-dublado">
+                  <span>TELAS GIGANTES/PLF</span>
+                  <span>DUBLADO</span>
+                </div>
+                <div class="container-p-schedule-all">
+                  <% schedule_parts.each do |schedule_part| %>
+                    <% schedule_part_split_spaces = schedule_part.split(" ") %>
+                    <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
+                      <% if schedule_part_split_space == "tg-d" %>
+                        <div class="container-svg-ticket">
+                          <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
+                          <span class="span-comprar">Comprar</span>
+                        </div>
+                      <% end %>
                     <% end %>
                   <% end %>
-                <% end %>
+                </div>
               </div>
             <% end %>
           </div>
