--- a/app/views/chose_movie_theater/index.html.erb
+++ b/app/views/chose_movie_theater/index.html.erb
@@ -68,28 +68,74 @@
           <div class="container-schedule-movie-theater">
             <% cinema_movies.each do |cinema_movie| %>
               <% schedule_parts = cinema_movie.screening_schedule.split(",") %>
-              <div class="container-vip-dublado">
+              <div class="container-telasgigantesplg-dublado">
+                <%= render_dublado_container(schedule_parts) %>
+                <div class="container-p-schedule-all">
+                  <%= render_time_buy_container(schedule_parts) %>
+                </div>
+              </div>
+              <div class="container-telasgigantesplg-dublado">
+                <%= render_vip_dublado_container(schedule_parts) %>
+                <div class="container-p-schedule-all">
+                  <% schedule_parts.each do |schedule_part| %>
+                    <% schedule_part_split_spaces = schedule_part.split(" ") %>
+                    <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
+                      <% if schedule_part_split_space == "v-d" %>
+                        <div class="container-svg-ticket">
+                          <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
+                          <span class="span-comprar">Comprar</span>
+                        </div>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="container-telasgigantesplg-dublado">
+                <%= render_vip_3d_dublado_container(schedule_parts) %>
+                <div class="container-p-schedule-all">
+                  <% schedule_parts.each do |schedule_part| %>
+                    <% schedule_part_split_spaces = schedule_part.split(" ") %>
+                    <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
+                      <% if schedule_part_split_space == "v-3d-d" %>
+                        <div class="container-svg-ticket">
+                          <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
+                          <span class="span-comprar">Comprar</span>
+                        </div>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="container-telasgigantesplg-dublado">
+                <%= render_3d_dbox_dublado_container(schedule_parts) %>
+                <div class="container-p-schedule-all">
+                  <% schedule_parts.each do |schedule_part| %>
+                    <% schedule_part_split_spaces = schedule_part.split(" ") %>
+                    <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
+                      <% if schedule_part_split_space == "3d-db-d" %>
+                        <div class="container-svg-ticket">
+                          <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
+                          <span class="span-comprar">Comprar</span>
+                        </div>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="container-telasgigantesplg-dublado">
+                <% rendered_once = false %>
                 <% schedule_parts.each do |schedule_part| %>
-                  <% schedule_part_split_spaces = schedule_part.split(" ") %>
-                  <% schedule_part_split_spaces.each_with_index do |schedule_part_split_space, index| %>
-                    <% if schedule_part_split_space == "v-d" %>
-                      <div class="container-span-vip-dublado">
-                        <span>VIP</span>
+                  <% schedule_part_split_spaces1 = schedule_part.split(" ") %>
+                  <% if schedule_part_split_spaces1.include?("tg-d")  %>
+                    <% if !rendered_once %>
+                      <% rendered_once = true %>
+                      <div class="container-span-telasgigantesplf-dublado">
+                        <span>TELAS GIGANTES/PLF</span>
                         <span>DUBLADO</span>
-                      </div>
-                      <div class="container-svg-ticket">
-                        <span class="span-movie-times"><%= schedule_part_split_spaces[index - 1] %></span>
-                        <span class="span-comprar">Comprar</span>
                       </div>
                     <% end %>
                   <% end %>
                 <% end %>
-              </div>
-              <div class="container-telasgigantesplg-dublado">
-                <div class="container-span-telasgigantesplf-dublado">
-                  <span>TELAS GIGANTES/PLF</span>
-                  <span>DUBLADO</span>
-                </div>
                 <div class="container-p-schedule-all">
                   <% schedule_parts.each do |schedule_part| %>
                     <% schedule_part_split_spaces = schedule_part.split(" ") %>
