--- a/app/assets/stylesheets/chose_movie_theater/index.css
+++ b/app/assets/stylesheets/chose_movie_theater/index.css
@@ -400,13 +400,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 
 .container-span-telasgigantesplf-dublado {
   display: flex;
   gap: 10px;
   white-space: nowrap;
+  margin-top: 15px;
 
   >span {
     color: #fff;
