criando chose_seats_and_more_svg_partial para svgs

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -5,6 +5,9 @@
 @import './chose_movie_theater/index.css';
 @import './chose_movie_theater_partial/banner_main.css';
 @import './chose_movie_theater_partial/info_movie.css';
+@import './chose_seats_and_more/index.css';
+@import './chose_seats_and_more/nav.css';
+@import './chose_seats_and_more/login_or_register.css';
 
 body {
   background-color: rgb(4 18 24) !important;
