criando javascript chose_seats_and_more pegando dia da semana e mais

--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -4,14 +4,29 @@
     <div class="div-svg-seats-type-tickets-bomboniere-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_seats" %>
     </div>
+    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
     <div class="div-svg-seats-type-tickets-bomboniere-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_tickets" %>
     </div>
+    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
     <div class="div-svg-seats-type-tickets-bomboniere-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
     </div>
+    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
     <div class="div-svg-seats-type-tickets-bomboniere-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_payment" %>
+    </div>
+  </div>
+  <div class="container-chose-seat-number-resume-order-main">
+    <div class="container-chose-seat-number">
+      <div class="container-location-date-hour-movie">
+        <span>Teste1</span>
+        <span>Teste2</span>
+        <span>Teste3</span>
+      </div>
+    </div>
+    <div class="container-order-summary">
+      <span>Resumo do pedido</span>
     </div>
   </div>
 </div>
