--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -1,9 +1,51 @@
+.container-body-chose-seats-and-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-seats-type-tickets-bomboniere-payment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+}
+
 .div-svg-seats-type-tickets-bomboniere-payment {
   display: flex;
-  /* width: 100%; */
+  border: 1px solid rgb(130 147 204);
+  border-radius: 50%;
+  padding: 3px;
 
   >svg {
     fill: rgb(152, 170, 236);
-    width: 25px;
+    width: 19px;
   }
+}
+
+.line-white-seats-type-tickets-bomboniere-payment {
+  /* border: 1px solid rgb(152, 170, 236); */
+  background: rgb(152, 170, 236);
+  width: 100%;
+  height: 1px;
+}
+
+.container-chose-seat-number-resume-order-main {
+  width: 100%;
+  display: flex;
+  gap: 15px
+}
+
+.container-chose-seat-number {
+  width: 75%;
+}
+
+.container-location-date-hour-movie {
+  color: #fff;
+}
+
+.container-order-summary {
+  color: #fff;
+
 }
