criando os seats disponivel e mais uns javascript

--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -20,9 +20,24 @@
   <div class="container-chose-seat-number-resume-order-main">
     <div class="container-chose-seat-number">
       <div class="container-location-date-hour-movie">
-        <span>Teste1</span>
-        <span>Teste2</span>
-        <span>Teste3</span>
+        <div class="container-svg-name">
+          <%= render "chose_seats_and_more_svg_partial/svg_location" %>
+          <span class="span-location-chose-seats-and-more"></span>
+        </div>
+        <div class="container-svg-name">
+          <%= render "chose_seats_and_more_svg_partial/svg_calendar" %>
+          <span class="span-calendar-chose-seats-and-more"></span>
+        </div>
+        <div class="container-svg-time-name">
+          <%= render "chose_seats_and_more_svg_partial/svg_time" %>
+          <span class="span-time-chose-seats-and-more"></span>
+        </div>
+      </div>
+      <div class="container-seats-chose-seats-and-more-main">
+        <div class="container-seats-chose-seats-and-more-1">
+          <div class="container-seats-chose-seats-and-more-2">
+          </div>
+        </div>
       </div>
     </div>
     <div class="container-order-summary">
