terminei de criar o scroll e manipular o mouse para escolher assentos

--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -116,6 +116,7 @@
   /* width: 95%; */
   height: 92%;
   user-select: none;
+  overflow: hidden !important;
 }
 
 .container-seats-chose-seats-and-more-2 {
